# Cylon

./: AGENTS.md  README.md
Cylon-scripts/eval-gapbs/: README.md  figure8-test.sh  figure8.sh
Cylon-scripts/eval-mio/: README.md
Cylon-scripts/eval-mio/run/: calc_mean.sh  figure3.sh  plot-fig10.gp  plot-fig3.gp  plot-fig9.gp  plot.gp  run-figure10.sh  run-figure3.sh  runx2.sh  (+2 more)
Cylon-scripts/eval-mlc/: README.md  figure2.sh  figure4-test.sh  figure4.sh  plot.gp  run-figure.sh
Cylon-scripts/eval-redis/: README.md
CylonFEMU/: .gitignore  Makefile  README.md  README.rst  cxl_rw_test  cxl_rw_test.c  diff  gitlog  version.rc
CylonFEMU/backends/: hostmem-ram.c
CylonFEMU/block/: block-backend.c  file-posix.c  io.c  io_uring.c  linux-aio.c  qcow2.c
CylonFEMU/femu-scripts/: femu-compile.sh  femu-copy-scripts.sh  pin.sh  run-cxlssd.sh  run-nossd-hcl.sh  run-nossd.sh
CylonFEMU/hw/: Kconfig  meson.build
CylonFEMU/hw/femu/: femu.c  kvm_ext.c  kvm_ext.h  meson.build
CylonFEMU/hw/femu/bbssd/: buffer.c  buffer.h  clock.c  fifo.c  ftl.c  ftl.h  lifo.c  s3fifo.c
CylonFEMU/hw/femu/cxlssd/: cxlssd.c
CylonFEMU/scsi/: qemu-pr-helper.c  utils.c
CylonFEMU/softmmu/: dma-helpers.c  memory.c  physmem copy.c  physmem.c  physmem_original.c
CylonLinux/: README  change  compile.sh
CylonLinux/block/: bio.c
CylonLinux/fs/: aio.c
CylonLinux/lib/: iov_iter.c
CylonLinux/mm/: filemap.c  gup.c
docs/: backend-memory-setup.md  cylon-project-guide.md  guest-image-setup.md
tools/: compile.sh  cxl_warmup.c  setup_dev.sh
tools/pin_binary/: README.md  build.sh  pin_binary.c
(+77 files in other folders)
