system_ss.add(when: 'CONFIG_FEMU_PCI', if_true: files('kvm_ext.c', 'dma.c', 'intr.c', 'nvme-util.c', 'nvme-admin.c', 'nvme-io.c', 'femu.c', 'nossd/nop.c', 'nand/nand.c', 'timing-model/timing.c', 'ocssd/oc12.c', 'ocssd/oc20.c', 'zns/zns.c', 'cxlssd/cxlssd.c', 'bbssd/bb.c', 'bbssd/ftl.c', 'bbssd/buffer.c', 'bbssd/fifo.c', 'bbssd/s3fifo.c', 'bbssd/lifo.c', 'bbssd/clock.c', 'lib/pqueue.c', 'lib/rte_ring.c', 'backend/dram.c'))
